# seqan

core/apps/rabema/: rabema_evaluate.cpp
extras/apps/bs_tools/: CMakeLists.txt  bisar.h  bisar_score.h
extras/apps/bs_tools/tests/: one_reads_se_N6000.CT_GA.sam  test_reads_se_N6000_0.CT_GA.verified.sam
extras/apps/mason2/: mason_options.cpp  mason_options.h  mason_simulator.cpp  sequencing.h  simulate_base.cpp  simulate_illumina.cpp  simulate_illumina_error_frequencies.h
include/seqan/stream/: iostream_bgzf.h
sandbox/krakau/: CMakeLists.txt
sandbox/krakau/apps/: CMakeLists.txt
sandbox/krakau/apps/add_sam_header/: CMakeLists.txt  INFO  add_sam_header.cpp
sandbox/krakau/apps/annoMeths/: CMakeLists.txt  INFO  annoMeths.cpp  annoMeths.h
sandbox/krakau/apps/bam_sam_conv/: CMakeLists.txt  INFO  bam_sam_conv.cpp
sandbox/krakau/apps/benchmark_calls/: CMakeLists.txt  INFO  benchmark_calls.cpp  benchmark_calls.h  benchmark_calls_2.h  benchmark_calls_level.h  benchmark_calls_vs_bissnp.h  benchmark_calls_vs_snpstore.h  parse_meth_level.h
sandbox/krakau/apps/bs_mason/: CMakeLists.txt  bs_mason.cpp  bs_mason.h  old_simulate_illumina_bs.h  simulate_illumina.h  simulate_illumina_bs.h
sandbox/krakau/apps/bs_mason/tests/: adeno-genome.fa.fasta  adeno-genome.fa.fasta.sam  adeno-genome.fa_1.fasta  adeno-genome.fa_2.fasta
sandbox/krakau/apps/convert_sam3to4/: CMakeLists.txt  INFO  convert_sam3to4.cpp  convert_sam3to4.h
sandbox/krakau/apps/getMethLevel/: CMakeLists.txt  INFO  getMethLevel.cpp  getMethLevel.h
sandbox/krakau/apps/merge_VCFs/: CMakeLists.txt  INFO  merge_VCFs.cpp
sandbox/krakau/apps/merge_sam/: CMakeLists.txt  INFO  merge_sam.cpp
sandbox/krakau/apps/post_pro/: CMakeLists.txt  INFO  bs_score.h  bs_score_data.h  post_pro.cpp  post_pro.h  post_pro_base.h
sandbox/krakau/apps/post_pro/example/: alignments_CT.sam  alignments_CT_verified.sam  info  reads_1.CT.fastq  reads_1.bs.fastq  reads_1.fastq  reads_2.CT.fastq  reads_2.GA.fastq  reads_2.bs.fastq  reads_2.fastq  reads_2_tmp.fastq  ref.CT.fa  ref.GA.fa  ref.fa
sandbox/krakau/apps/post_pro/tests/: generate_outputs.sh  output.txt  output1.txt  output2.txt  reads_mason2_msc5_realign_N6000.CT_GA.sam  reads_mason2_msc5_realign_N6000.CT_GA.verified.sam  reads_mason2_msc5_realign_N6000.fastq  reads_mason2_msc5_realign_N6000_simple.CT_GA.verified.sam  run_tests.py
sandbox/krakau/apps/pre_pro/: CMakeLists.txt  INFO  pre_pro.cpp  pre_pro.h
sandbox/krakau/apps/snp_meth_store/: CMakeLists.txt  bs_alphabets.h  bs_consensus_realign.h  bs_one_calling.h  bs_realignment.h  bs_score.h  bs_score_data.h  bs_sep_calling.h  meths.h  old_bs_one_calling.h  snp_meth_store.cpp  snp_meth_store.h  util.h
sandbox/krakau/apps/snp_meth_store/example/: exampleGenome.fa  exampleGenomeMeth.fa  exampleReads.fa  exampleReads1.fa  exampleReads2.fa  exampleReads2_orig.fa  exampleReadsMeth.fa  exampleReads_orig.fa  mappedReads1.sam  mappedReads1_2.sam  mappedReadsMeth.sam  snp_meth.out
sandbox/krakau/apps/snp_meth_store/tests/: callsNoRe_1.vcf  callsRe_1.1.vcf  callsRe_1.2.vcf  callsRe_1.vcf  callsRe_1_copy.vcf  callsRe_2.vcf  generate_outputs.sh  reads_mason2_msc5_realign_N6000.CT_GA.verified_so.sam  run_tests.py  snp_meth_store_NoRe_1.stdout  snp_meth_store_Re_1.1.stdout  snp_meth_store_Re_1.2.stdout  snp_meth_store_Re_1.stdout  snp_meth_store_Re_2.stdout
sandbox/krakau/apps/test_app/: CMakeLists.txt  test_app.cpp
sandbox/krakau/demos/: CMakeLists.txt
sandbox/krakau/tests/: CMakeLists.txt
sandbox/krakau/tests/bs_mason/: CMakeLists.txt  hg18_21_22_small.fa  hg18_21_22_small.fa.fasta  hg18_21_22_small.fa.fasta.sam  hg18_21_22_small.fa_1.fasta  hg18_21_22_small.fa_2.fasta  test_bs_mason.cpp  test_bs_mason.h
sandbox/krakau/tests/post_pro/: CMakeLists.txt  test_post_pro.cpp  test_post_pro.h
sandbox/krakau/tests/snp_meth_store/: CMakeLists.txt  test_snp_meth_store.cpp  test_snp_meth_store.h
